test/errors/error28.base
A type with the name 'uint' could not be found
fun foo() {
  val x : uint;
          ^^^^
